// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser unary expressions parses consecutive unary '-' 1`] = `
Array [
  Expression {
    "expression": Unary {
      "operator": Object {
        "kind": 7,
        "line": 1,
        "literal": undefined,
      },
      "right": Unary {
        "operator": Object {
          "kind": 7,
          "line": 1,
          "literal": undefined,
        },
        "right": Unary {
          "operator": Object {
            "kind": 7,
            "line": 1,
            "literal": undefined,
          },
          "right": Unary {
            "operator": Object {
              "kind": 7,
              "line": 1,
              "literal": undefined,
            },
            "right": Unary {
              "operator": Object {
                "kind": 7,
                "line": 1,
                "literal": undefined,
              },
              "right": Literal {
                "value": 5,
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses consecutive unary 'not' 1`] = `
Array [
  Expression {
    "expression": Unary {
      "operator": Object {
        "kind": 58,
        "line": 1,
        "literal": undefined,
      },
      "right": Unary {
        "operator": Object {
          "kind": 58,
          "line": 1,
          "literal": undefined,
        },
        "right": Unary {
          "operator": Object {
            "kind": 58,
            "line": 1,
            "literal": undefined,
          },
          "right": Unary {
            "operator": Object {
              "kind": 58,
              "line": 1,
              "literal": undefined,
            },
            "right": Unary {
              "operator": Object {
                "kind": 58,
                "line": 1,
                "literal": undefined,
              },
              "right": Literal {
                "value": BrsBoolean {
                  "kind": 1,
                  "value": true,
                },
              },
            },
          },
        },
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary '-' 1`] = `
Array [
  Expression {
    "expression": Unary {
      "operator": Object {
        "kind": 7,
        "line": 1,
        "literal": undefined,
      },
      "right": Literal {
        "value": 5,
      },
    },
  },
]
`;

exports[`parser unary expressions parses unary 'not' 1`] = `
Array [
  Expression {
    "expression": Unary {
      "operator": Object {
        "kind": 58,
        "line": 1,
        "literal": undefined,
      },
      "right": Literal {
        "value": BrsBoolean {
          "kind": 1,
          "value": true,
        },
      },
    },
  },
]
`;
